--- a/source/frontend/nuxt-project/package.json
+++ b/source/frontend/nuxt-project/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/i18n": "^7.2.2",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/storybook": "^4.3.0",
     "@nuxtjs/style-resources": "^1.2.1",
@@ -26,6 +27,7 @@
     "moment": "^2.26.0",
     "nuxt": "^2.15.8",
     "rsajs": "2.0.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.1",
     "vue-i18n": "^8.27.2",
@@ -44,4 +46,3 @@
     "sass-loader": "10.3.1"
   }
 }
-
